# substrait

./: CMakeLists.txt
binary/: CMakeLists.txt  expression.proto  relations.proto  type.proto
site/: requirements.txt
